leptos_macro/src/view/snapshots/leptos_macro__view__tests__csr__custom_event.snap
---
source: leptos_macro/src/view/tests.rs
assertion_line: 101
expression: pretty(result)
---
fn view() {
    ::leptos::IntoView::into_view(
            #[allow(unused_braces)]
            {
                {
                    let props = ::leptos::component_props_builder(&ExternalComponent);
                    #[allow(clippy::let_unit_value, clippy::unit_arg)]
                    let props = props.build();
                    #[allow(unreachable_code)]
                    ::leptos::component_view(
                        #[allow(clippy::needless_borrows_for_generic_args)]
                        &ExternalComponent,
                        props,
                    )
                }
            },
        )
        .on(
            ::leptos::leptos_dom::ev::undelegated(
                ::leptos::leptos_dom::ev::Custom::new("custom.event.clear"),
            ),
            move |_: Event| set_value(0),
        )
}

