leptos_macro/src/view/snapshots/leptos_macro__view__tests__csr__simple_counter.snap
---
source: leptos_macro/src/view/tests.rs
expression: pretty(result)
---
fn view() {
    {
        let _ = leptos::leptos_dom::html::div;
        leptos::leptos_dom::html::div(cx)
            .child((
                cx,
                {
                    let _ = leptos::leptos_dom::html::button;
                    leptos::leptos_dom::html::button(cx)
                        .on(::leptos::ev::click, move |_| set_value(0))
                        .child("Clear")
                },
            ))
            .child((
                cx,
                {
                    let _ = leptos::leptos_dom::html::button;
                    leptos::leptos_dom::html::button(cx)
                        .on(
                            ::leptos::ev::click,
                            move |_| set_value.update(|value| *value -= step),
                        )
                        .child("-1")
                },
            ))
            .child((
                cx,
                {
                    let _ = leptos::leptos_dom::html::span;
                    leptos::leptos_dom::html::span(cx)
                        .child("Value: ")
                        .child((cx, { value }))
                        .child("!")
                },
            ))
            .child((
                cx,
                {
                    let _ = leptos::leptos_dom::html::button;
                    leptos::leptos_dom::html::button(cx)
                        .on(
                            ::leptos::ev::click,
                            move |_| set_value.update(|value| *value += step),
                        )
                        .child("+1")
                },
            ))
    }
}

